[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-supplychain-controltower"
version = "0.1.0"
description = "AI-native operational intelligence system for supply chain logistics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Akash Raj"},
    {name = "Prem Kumar"},
]
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/controltower"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
